--- a/src/main/webapp/assets/css/band_profile.css
+++ b/src/main/webapp/assets/css/band_profile.css
@@ -68,7 +68,7 @@
 .profileImage {
   width: 100%;
   height: 100%;
-  border-radius: 40px 40px 0 0;
+  border-radius: 40px;
   filter: brightness(95%);
 }
 .mainBgColor {
