--- a/src/main/webapp/assets/css/modify_main.css
+++ b/src/main/webapp/assets/css/modify_main.css
@@ -147,7 +147,7 @@ p, ul, li{
 .style_input {
     position: relative
 }
-.i_input {
+.con_input {
     width: 100%;
     height: 40px;
     padding-left: 8px;
