--- a/src/main/webapp/assets/css/modify_main.css
+++ b/src/main/webapp/assets/css/modify_main.css
@@ -166,6 +166,7 @@ p, ul, li{
     width: 22px;
     height: 22px;
     display: inline-block;
+    cursor: pointer;
 }
 .error{
     padding: 10px;
