--- a/src/main/webapp/assets/css/band.css
+++ b/src/main/webapp/assets/css/band.css
@@ -1881,7 +1881,8 @@ body {
   letter-spacing: 0;
   min-height: 246px;
   border-radius: 2px;
-  color: #999;
+  color: #222;
+  width: 100%;
   line-height: 1.5;
   outline: 0;
   background: #fff;
@@ -2639,4 +2640,218 @@ body {
 
 .sf_blue {
   color: #1ba7e9 !important;
+}
+
+/* 글 옵션 */
+.postFunction .lyMenu {
+  min-width: 145px;
+  display: block;
+  right: 22px;
+  top: 30px;
+  z-index: 12;
+  position: absolute;
+  background: #fff;
+  box-shadow: 0px 4px 13px rgba(0, 0, 0, 0.15), 0px 0px 2px 1px rgba(0, 0, 0, 0.02);;
+}
+
+.lyMenu li {
+  border-top: 1px solid #e7e7e7;
+}
+
+.lyMenu li:first-child {
+  border-top: 0 !important;
+}
+
+.lyMenu a {
+  font-size: 13px;
+  font-weight: 400;
+  color: #222;
+  display: block;
+  min-height: 37px;
+  padding: 12px 17px 11px;
+  line-height: 1.2;
+  text-align: left;
+  white-space: nowrap;
+}
+
+.addStatus span:nth-child(2):hover {
+  text-decoration: underline;
+}
+
+
+/* 글 옵션 */
+.postFunction .lyMenu {
+  min-width: 145px;
+  display: block;
+  right: 22px;
+  top: 30px;
+  z-index: 12;
+  position: absolute;
+  background: #fff;
+  box-shadow: 0px 4px 13px rgba(0, 0, 0, 0.15), 0px 0px 2px 1px rgba(0, 0, 0, 0.02);;
+}
+
+.lyMenu li {
+  border-top: 1px solid #e7e7e7;
+}
+
+.lyMenu li:first-child {
+  border-top: 0 !important;
+}
+
+.lyMenu a {
+  font-size: 13px;
+  font-weight: 400;
+  color: #222;
+  display: block;
+  min-height: 37px;
+  padding: 12px 17px 11px;
+  line-height: 1.2;
+  text-align: left;
+  white-space: nowrap;
+}
+
+.addStatus span:nth-child(2):hover {
+  text-decoration: underline;
+}
+
+/* 팝업 : 글 디테일 뷰 */
+
+.lyPostViewer {
+  position: relative;
+  width: 600px;
+  margin: auto;
+  align-self: flex-start;
+}
+
+.lyPostViewer .postViewer {
+  position: relative;
+  text-align: left;
+  box-shadow: 0 0 0 1px rgba(0, 0, 0, .34), 0 10px 10px 0 rgba(0, 0, 0, .06);
+  font-size: 13px;
+}
+
+.cPostCard {
+  position: relative;
+}
+
+.cContentsCard {
+  position: relative;
+  background-color: #fff;
+}
+
+.lyPostViewer .postViewer .cPostCard .cContentsCard .postWriter {
+  display: flex;
+  height: 100px;
+  padding-top: 39px;
+  padding-inline: 18px;
+  align-items: flex-start;
+  cursor: auto;
+  position: relative;
+  background-color: transparent;
+  z-index: 11;
+}
+
+.cContentsCard .postWriter::before {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 10;
+  background-color: #fff;
+  content: '';
+}
+
+.cContentsCard .postWriter .uProfile {
+  margin-left: 22px;
+  margin-right: 10px;
+  z-index: 12;
+}
+
+.cContentsCard .postWriter .postWriterInfoWrap .ellipsis {
+  display: block;
+  overflow: hidden;
+  max-width: 100%;
+  white-space: nowrap;
+  word-break: normal;
+  overflow-wrap: normal;
+  text-overflow: ellipsis;
+}
+
+.cContentsCard .postWriter .postWriterInfoWrap .text {
+  font-size: 14px;
+  font-weight: 700;
+  color: #222;
+  margin-top: 3px;
+}
+
+.cContentsCard .postWriter .postWriterInfoWrap .postListInfoWrap {
+  padding-top: 2px;
+  font-size: 0;
+  display: block;
+  overflow: hidden;
+  max-width: 100%;
+  white-space: nowrap;
+  word-break: normal;
+  overflow-wrap: normal;
+  text-overflow: ellipsis;
+}
+
+.cContentsCard .postMain .readNotice {
+  position: relative;
+  margin: 0 39px;
+  border-top: 1px solid #e7e7e7;
+  border-bottom: 1px solid #e7e7e7;
+}
+
+.cContentsCard .postMain .readNotice p {
+  position: relative;
+  z-index: 1;
+  text-indent: 4px;
+  line-height: 37px;
+}
+
+.cContentsCard .postMain .readNotice a {
+  display: block;
+}
+
+.lyPostViewer .postViewer .cPostCard .cContentsCard .postMain .postBody {
+  padding: 12px 40px 0;
+}
+
+.lyPostViewer .postViewer .cPostCard .cContentsCard .postMain .postBody>div:first-child .postText {
+  padding-top: 0;
+  font-size: 14px;
+  color: #222;
+  text-align: left;
+  line-height: 1.5;
+  cursor: auto;
+  overflow-wrap: break-word;
+  word-break: break-word;
+}
+
+.cContentsCard .postMain .postText .txtBody {
+  overflow-wrap: break-word;
+  word-break: break-word;
+  font-size: 14px;
+  line-height: 1.43;
+  white-space: pre-wrap;
+}
+
+.lyPostViewer .postViewer .cPostCard .cContentsCard .postCount {
+  padding: 25px 40px 16px;
+  margin-top: 0;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.lyPostViewer .cComment .itemWrap {
+    padding: 14px 62px 12px 84px;
+}
+
+.lyPostViewer .cComment .writeInfo>.uProfile {
+    left: 40px;
 }
