휴대폰 인증번호 전송시 난수발생 하게 해놨으니까 콘솔창 봐야함 + 타이머 추가

--- a/src/main/webapp/assets/css/modify_member.css
+++ b/src/main/webapp/assets/css/modify_member.css
@@ -370,6 +370,15 @@ input::placeholder {
     font-size: 13px;
     color: #ef3e42;
 }
+#timer {
+	color: #ef3e4e;
+    position: absolute;
+    width: 40px;
+    height: 20px;
+    right: 15px;
+    bottom: 12px;
+    font-size: 15px;
+}
 
 /* 자바스크립트 적용 css */
 .modify_box_small.on { 
