--- a/src/main/webapp/assets/css/setting_leader_band_name.css
+++ b/src/main/webapp/assets/css/setting_leader_band_name.css
@@ -159,6 +159,7 @@ legend {
   font-size: 14px;
   font-weight: 400;
   color: #222;
+  cursor: pointer;
 }
 .cover_change::before {
   width: 30px;
