--- a/src/main/webapp/assets/css/band.css
+++ b/src/main/webapp/assets/css/band.css
@@ -2903,3 +2903,30 @@ body {
   height: 100%;
   content: '';
 }
+
+/* 프로필 클릭 시 드롭다운 */
+.menuModalLayer {
+  display: block;
+  top: 40px;
+  right: 0;
+  position: absolute;
+  min-width: 158px;
+  padding: 12px 0;
+  border-radius: 16px;
+  background-color: #fff;
+  box-shadow: 0px 4px 13px rgba(0, 0, 0, 0.15), 0px 0px 2px 1px rgba(0, 0, 0, 0.02);
+  z-index: 10;
+}
+
+.menuModalLink {
+  font-size: 13px;
+  font-weight: 400;
+  color: #222;
+  display: flex;
+  align-items: center;
+  width: 100%;
+  padding: 8px 18px;
+  line-height: 1.24;
+  text-align: left;
+  white-space: nowrap;
+}
