--- a/src/main/webapp/assets/css/band.css
+++ b/src/main/webapp/assets/css/band.css
@@ -3229,12 +3229,81 @@ body {
 	margin-top: 9px !important;
 }
 
+.lyWrap {
+	z-index: 30000;
+    position: fixed;
+    display: flex;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    padding: 30px;
+    background: rgba(0, 0, 0, .75);
+    overflow: auto;
+}
 
+.originalProfile {
+	position: static;
+    width: auto;
+    box-shadow: none;
+    background: 0 0;
+    margin: auto;
+    align-self: flex-start;
+}
 
+.mainprofile {
+	padding: 0;
+	position: static;
+	text-align: left;
+}
 
-
-
-
+.originalProfileImg {
+	max-width: 100%;
+    vertical-align: top;
+    border-style: none;
+}
+.closeBtn {
+	padding: 0;
+	margin: 0 20px;
+	font-size: 0;
+	text-align: center;
+	height: 0 !important;
+	display: block;
+}
+.btnClose {
+	position: absolute;
+    right: 11px;
+    top: 15px;
+    margin: 0 5px;
+    width: 20px;
+    height: 20px;
+    overflow: hidden;
+    display: inline-block;
+    background-repeat: no-repeat;
+    text-indent: -999px;
+    background-image: url(	https://ssl.pstatic.net/cmstatic/webclient/dres/20240628151159/images/spr_icons.png);
+    background-position: -286px -690px;
+    min-width: 0;
+    min-height: 0;
+    padding: 0;
+    border: 0;
+    border-radius: 0;
+    background: 0 0;
+    font-size: 0;
+    line-height: 1;
+    color: #fff;
+    font-weight: 500;
+    vertical-align: top;
+    white-space: nowrap;
+    cursor: pointer;
+}
+.layerLastElement {
+	border-radius: 0;
+	cursor: pointer;
+	border: 0;
+}
 
 
 
