--- a/src/main/webapp/assets/css/payment_p1.css
+++ b/src/main/webapp/assets/css/payment_p1.css
@@ -8,8 +8,14 @@
   border: 1px solid red;
 } */
 .playtitle{
-  font-size: 24px;
+  font-size: 23px;
+  letter-spacing : -2px;
   font-weight: bolder;
+  display: inline-block; /* span 태그에 너비를 적용하기 위해 필요 */
+  width: 600px; /* 원하는 너비로 설정 */
+  white-space: nowrap; /* 줄바꿈을 하지 않도록 설정 */
+  overflow: hidden; /* 넘치는 텍스트를 숨김 */
+  text-overflow: ellipsis;
 }
 .line{
   display: inline-block;
@@ -91,10 +97,9 @@ header{
 
 
 .playhallseatimgsmall{
-  width: 210px;
   height: 174px;
   margin-top: 18px;
-  margin-left: 55px;
+  margin-left: 80px;
 }
 .kingframe{
   margin-left: 55px;
