--- a/src/main/webapp/assets/css/common.css
+++ b/src/main/webapp/assets/css/common.css
@@ -21,7 +21,7 @@ header .utill ul .utill_link a {display: block;padding: 10px 6px 9px;font-size: 
 header .utill ul .utill_link a:hover {text-decoration : underline;} /*이거 추가하면 어떻습니까?*/
 /* nav */
 .nav_box .inner{ display: flex;-webkit-box-align: center;-webkit-align-items: center;-ms-flex-align: center;align-items: center;margin: 0 auto;width: 1120px;height: 88px;}
-.nav_box .logo{width:130px;height:50px;background-repeat: no-repeat; background-image:url(/assets/img/ticklink/logo.svg);text-indent: -999px; margin: 0 10px;}
+.nav_box .logo{width:130px;height:50px;background-repeat: no-repeat; background-image:url(../img/ticklink/logo.svg);text-indent: -999px; margin: 0 10px;}
 .nav_box .logo a {width: 100%; height:100%;}
 .nav_box .nav li:first-child {margin-left: 20px;}
 .nav_box .nav li a{font-size: 26px;font-weight: 700;line-height: 34px;letter-spacing: -0.04em; padding:0 10px;}
