--- a/src/main/webapp/assets/css/login.css
+++ b/src/main/webapp/assets/css/login.css
@@ -201,6 +201,14 @@ input:focus {outline:none;}
     cursor: pointer;
 }
 
+.nav_box .logo{width: 179px;
+    height: 80px;
+    background-repeat: no-repeat;
+    background-image: url(../img/ticklink/logo.svg);
+    background-size: 100%;
+    text-indent: -999px;
+    margin: 0 auto;}
+.nav_box .logo a {width: 100%; height:100%;}
 
 /* 자바스크립트 연동 효과*/
 .special {
