--- a/src/main/webapp/assets/css/setting_leader_band_name.css
+++ b/src/main/webapp/assets/css/setting_leader_band_name.css
@@ -178,6 +178,8 @@ legend {
   font-size: 11px;
   font-weight: 400;
   color: #777;
+  text-align: center;
+  height: 100%;
 }
 .image_update {
   position: absolute;
@@ -490,4 +492,24 @@ legend {
   white-space: nowrap;
   cursor: pointer;
   color: #fff;
+}
+
+.sub_q_label {
+	padding-top: 40px;
+}
+
+#inputSubQ {
+    line-height: 54px;
+    font-size: 15px;
+    font-weight: 400;
+    color: #333;
+    position: relative;
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    background: 0 0;
+    border-radius: 0;
+    overflow: visible;
+    margin: 0;
+    z-index: 3;
 }
