--- a/src/main/webapp/assets/css/modify_main.css
+++ b/src/main/webapp/assets/css/modify_main.css
@@ -43,7 +43,7 @@ p, ul, li{
     width: 151px;
     height: 70px; /* 38px */
     text-decoration: none;
-    background: url(https://th.bing.com/th/id/OIP.GcpUB3UxsaArPwX00cYZmQHaEK?w=304&h=180&c=7&r=0&o=5&dpr=1.3&pid=1.7) no-repeat center;
+    background: url(/Tcp2/assets/img/ticketlink/logo.svg) no-repeat center;
 }
 .hidden {
     position: absolute;
