--- a/src/main/webapp/assets/css/modify_member.css
+++ b/src/main/webapp/assets/css/modify_member.css
@@ -61,7 +61,7 @@ input::placeholder {
     width: 151px;
     height: 70px !important; /*38px*/
     text-decoration: none;
-    background: url(https://th.bing.com/th/id/OIP.GcpUB3UxsaArPwX00cYZmQHaEK?w=304&h=180&c=7&r=0&o=5&dpr=1.3&pid=1.7) center no-repeat;
+    background: url(/Tcp2/assets/img/ticklink/logo.svg) center no-repeat;
 }
 .hidden {
     position: absolute;
