--- a/src/main/webapp/assets/css/modify_memberjoin.css
+++ b/src/main/webapp/assets/css/modify_memberjoin.css
@@ -7,10 +7,10 @@ ul, li {
     font-size: 20px;
     margin-top: 25px;
     border: 1px solid #ddd;
-    background: url(https://th.bing.com/th/id/OIP.GcpUB3UxsaArPwX00cYZmQHaEK?w=304&h=180&c=7&r=0&o=5&dpr=1.3&pid=1.7);
+    background: url();
     background-position: 284px -90px;
     font-weight: bold;
-    color: rgb(58, 54, 155);
+    color: black;
 }   
 .sns_div {
     font-size: 14px;
