--- a/src/main/webapp/assets/css/payment_p3.css
+++ b/src/main/webapp/assets/css/payment_p3.css
@@ -340,3 +340,10 @@ input[type="checkbox"]:checked::after {
 .redprenextbtn:hover {
   background-color: #ED2626;
 }
+.payselect{
+    width: 180px;
+    height: 40px;
+    padding-top: 10px;
+    padding-left: 5px;
+    margin-left: 9px;	
+}
