--- a/src/main/webapp/assets/css/agreeToTerms.css
+++ b/src/main/webapp/assets/css/agreeToTerms.css
@@ -21,11 +21,11 @@ span {
     color: black;
     position: absolute;
     width: 151px;
-    height: 38px;
+    height: 50px;
     bottom: 20px;
     top: auto;
     left: 24px;
-    background: url(https://th.bing.com/th/id/OIP.GcpUB3UxsaArPwX00cYZmQHaEK?w=304&h=180&c=7&r=0&o=5&dpr=1.3&pid=1.7) center no-repeat;
+    background: url(../img/ticklink/logo.svg)center no-repeat;
 }
 .headerTitle {
     font-size: 14px;
