--- a/src/main/webapp/assets/css/signup.css
+++ b/src/main/webapp/assets/css/signup.css
@@ -40,8 +40,8 @@ input::placeholder {
     bottom: 20px;
     left: 24px;
     width: 151px;
-    height: 38px;
-    background: url(https://th.bing.com/th/id/OIP.GcpUB3UxsaArPwX00cYZmQHaEK?w=304&h=180&c=7&r=0&o=5&dpr=1.3&pid=1.7) center no-repeat;
+    height: 50px;
+    background: url(../img/ticklink/logo.svg)center no-repeat;
     
 }
 .header_title {
