--- a/src/main/webapp/assets/css/login.css
+++ b/src/main/webapp/assets/css/login.css
@@ -208,7 +208,12 @@ input:focus {outline:none;}
     background-size: 100%;
     text-indent: -999px;
     margin: 0 auto;}
-.nav_box .logo a {width: 100%; height:100%;}
+.nav_box .logo a {    
+	width: 100%;
+    height: 100%;
+    display: inline-block;
+    position: relative;
+    left: 500px;}
 
 /* 자바스크립트 연동 효과*/
 .special {
