--- a/src/main/webapp/assets/css/noticeContent.css
+++ b/src/main/webapp/assets/css/noticeContent.css
@@ -11,7 +11,7 @@
       line-height: 2;
       background-color: #f5f5f5;
       margin: 0;
-      padding: 20px;
+      padding: 0 20px;
     }
 
 #Login_main {
