밴드 생성 페이지 수정

--- a/src/main/webapp/assets/css/setting_leader_band_name.css
+++ b/src/main/webapp/assets/css/setting_leader_band_name.css
@@ -498,7 +498,7 @@ legend {
 	padding-top: 40px;
 }
 
-#inputSubQ {
+#inputSubQ, #inputNickname {
     line-height: 54px;
     font-size: 15px;
     font-weight: 400;
